[package]
name = "breakout"
version = "0.1.1"
authors = [""]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# agb = "0.8.0"
agb = { git = 'https://github.com/agbrs/agb' }

[profile.release]
panic = "abort"
lto = true
